projects/compiler/test/typechecker/return/as_expr_error_never.out
Error at %FILE_NAME%:2:11
Forbidden type for assignment
  |    val s = if true {
               ^
Expression has type Never, which can never be used for assignment
